BUNDOX-26: Java namespace includes class/filename. Had to manaully patch OCP rewrite to get files with [] to work.